--- a/ProvaDeConceito-1/pom.xml
+++ b/ProvaDeConceito-1/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ufv.suarepublica</groupId>
-	<artifactId>SuaRepublica</artifactId>
+	<groupId>ufv</groupId>
+	<artifactId>ProvaDeConceito-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>SuaRepublica</name>
-	<description>Prova de conceito das ferramentea</description>
+	<name>ProvaDeConceito-1</name>
+	<description>Trabalho de Projeto de Sistemas para Web</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>10</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
